edited the title page

--- a/title.tex
+++ b/title.tex
@@ -18,7 +18,7 @@
 % bibliographic identification and priority concerns. This information may
 % appear in the title page or in the back of the title page.
 
-% This document has been modified from its original version by Kathryn Huff 
+% This document has been modified from its original version by Kathryn Huff
 % Acknowledgement of the original version is below.
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -35,17 +35,17 @@
 %
 % License:
 % CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
-% 
-% Instructions for using this template:
-% This title page is capable of being compiled as is. This is not useful for 
-% including it in another document. To do this, you have two options: 
 %
-% 1) Copy/paste everything between \begin{document} and \end{document} 
-% starting at \begin{titlepage} and paste this into another LaTeX file where you 
+% Instructions for using this template:
+% This title page is capable of being compiled as is. This is not useful for
+% including it in another document. To do this, you have two options:
+%
+% 1) Copy/paste everything between \begin{document} and \end{document}
+% starting at \begin{titlepage} and paste this into another LaTeX file where you
 % want your title page.
 % OR
 % 2) Remove everything outside the \begin{titlepage} and \end{titlepage}, rename
-% this file and move it to the same directory as the LaTeX file you wish to add it to. 
+% this file and move it to the same directory as the LaTeX file you wish to add it to.
 % Then add \input{./<new filename>.tex} to your LaTeX file where you want your
 % title page.
 %
@@ -78,7 +78,7 @@
 
 \begin{titlepage} % Suppresses displaying the page number on the title page and the subsequent page counts as page 1
     \newcommand{\HRule}{\rule{\linewidth}{0.5mm}} % Defines a new command for horizontal lines, change thickness here
-    
+
     \center % Centre everything on the page
 
     %------------------------------------------------
@@ -90,15 +90,15 @@
         \includegraphics[width=\textwidth]{./arfc-logo.png}
         \end{minipage}%
         \begin{minipage}{0.6\textwidth}
-        {\begin{flushright}\huge\bfseries An Unnecessarily Convoluted Academic Title
+        {\begin{flushright}\huge\bfseries Evaluation of the Feasibility of a Fountain-Style Reactor
                            \end{flushright}}
-        {\begin{flushright}\large\textit{And Equally Convoluted Subtitle}\end{flushright}}
+        {\begin{flushright}\large\textit{Based on Current Molten Salt Reactor Pumping Technologies}\end{flushright}}
         \end{minipage}
 
     \vspace{0.2cm}
     \HRule
     \vspace{0.5cm}
-    
+
     %------------------------------------------------
     %    Author(s)
     %------------------------------------------------
@@ -115,14 +115,15 @@
                \begin{flushright}
                        \large
                        \textit{Prepared by:}\\
-                       Suzy \textsc{Student}\\ %
-                       Gary \textsc{Grad} %
+                       Nataly \textsc{Panczyk}\\ %
+                       Gavin \textsc{Davis}\\ %
+                       Anna \textsc{Balla} %
                        \vspace{4mm}\\
                        \textit{Principal Investigator:}\\ %
                        Prof. Kathryn D. \textsc{Huff} % Supervisor's name
                \end{flushright}
     \end{minipage}
-    
+
     % If you don't want a supervisor, uncomment the two lines below and comment the code above
     %{\large\textit{Author}}\\
     %John \textsc{Smith} % Your name
@@ -131,54 +132,53 @@
     %    Report Number
     %------------------------------------------------
     \vspace{1cm}
-    \textsc{\LARGE\bfseries UIUC-ARFC-YYYY-NN} % Replace YYYY with the year, NN with report index
+    \textsc{\LARGE\bfseries UIUC-ARFC-2021-NN} % Replace YYYY with the year, NN with report index
     \vspace{0.5cm}
-    
+
     %------------------------------------------------
     %    Date
     %------------------------------------------------
-    
+
     \vspace{0.5cm} % Position the date further down the remaining page
-    {\large Month DD, YYYY} % January 1, 3000
+    {\large April 06, 2021} % January 1, 3000
     % Use the date of actual publication, change the \today to a set date if you want to be precise
     \vspace{0.5cm}
 
 %------------------------------------------------
     %    Headings
     %------------------------------------------------
-    
+
     \textsc{\LARGE Advanced Reactors and Fuel Cycles}\\[0.25cm] % Research Group
-    
+
     \textsc{\large Dept. of Nuclear, Plasma, \& Radiological Engineering}\\% Department
-    
+
     \textsc{\large University of Illiois at Urbana-Champaign}\\ % University
 
 
-    
+
     %------------------------------------------------
     %    Logo
     %------------------------------------------------
-    
+
     \vspace{0.5cm}
     \includegraphics[width=0.8\textwidth]{./illinois.eps}\\[1cm] % Include a department/university logo - this will require the graphicx package
-     
+
     %----------------------------------------------------------------------------------------
 
     %------------------------------------------------
-    %   Funding 
+    %   Funding
     %------------------------------------------------
-    % For this section, either use \vfill to fill the space 
+    % For this section, either use \vfill to fill the space
     % or insert funding acknowledgement
-    \textit{This research was performed using funding received from the 
-    Department of Silly Walks, `A Very Good Project Title,' Award Number 
+    \textit{This research was performed using funding received from the
+    Department of Silly Walks, `A Very Good Project Title,' Award Number
     NNNNNNN-NNNNNN.}
 
 \end{titlepage}
 %----------------------------------------------------------------------------------------
 %\pagebreak
-%\input{main}
+\input{main}
 
 %\bibliographystyle{unsrt}
 %\bibliography{bibliography}
 \end{document}
-
